[package]
name = "rumpkernel"
version = "0.0.1"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"
description = "Rumpkernel as a crate"
readme = "README.md"
license = "MIT"
build = "build.rs"
homepage = "https://github.com/gz/rust-rumpkernel"
repository = "https://github.com/gz/rust-rumpkernel"

links = "rkapps"

[build-dependencies]
#git2 = "0.8"
num_cpus = "1.9"
