[package]
name = "rumpkernel"
version = "0.0.3"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"
description = "Rumpkernel as a crate"
readme = "README.md"
license = "BSD-2-Clause"
build = "build.rs"
homepage = "https://github.com/gz/rust-rumpkernel"
repository = "https://github.com/gz/rust-rumpkernel"

links = "rkapps"

[build-dependencies]
num_cpus = "1.9"
